# django-test-tracker

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  wait_for.py
src/config/: settings.py  settings_test.py  urls.py
src/core/: exception_handlers.py  throttling.py
src/users/: admin.py
src/users/api/: tokens.py  urls.py
src/users/exceptions/: user_exceptions.py
src/users/managers/: user_manager.py
src/users/migrations/: 0001_initial.py
src/users/models/: user.py
src/users/selectors/: user_list_selectors.py  user_selectors.py
src/users/services/: user_logout.py  user_services.py
src/workflows/: admin.py
src/workflows/api/: urls.py
src/workflows/exceptions/: comment_exceptions.py  task_exceptions.py
src/workflows/migrations/: 0001_initial.py
src/workflows/models/: __init__.py  comment.py  enums.py  task.py
src/workflows/permissions/: comment_permissions.py  task_permissions.py
src/workflows/selectors/: comment_selectors.py  task_selectors.py
src/workflows/services/: comment_services.py  task_services.py
tests/: conftest.py
tests/config/: test_settings_test.py
tests/core/: test_exception_handlers.py  test_throttling.py
tests/users/: factories.py  test_selectors_and_utils.py  test_user_manager.py  test_user_selectors.py  test_user_services.py
tests/users/api/: test_login.py  test_logout.py  test_me.py  (+2 more)
tests/workflows/: factories.py  test_models_admin.py  test_services.py
(+32 files in other folders)
